HLT-3521 Fixed optimise contrast for webkit (others are aok)

--- a/src/main/webapp/bundles/core/less/utilities.less
+++ b/src/main/webapp/bundles/core/less/utilities.less
@@ -134,6 +134,7 @@
 
 	& when not (@prop-scale = 1) {
 		image-rendering: auto;
+		image-rendering: -webkit-optimize-contrast;
 		image-rendering: optimize-contrast;
 	}
 }
@@ -143,6 +144,7 @@
 
 	& when not (@prop-scale = 1) {
 		image-rendering: auto;
+		image-rendering: -webkit-optimize-contrast;
 		image-rendering: optimize-contrast;
 	}
 }
@@ -152,6 +154,7 @@
 
 	& when not (@prop-scale = 1) {
 		image-rendering: auto;
+		image-rendering: -webkit-optimize-contrast;
 		image-rendering: optimize-contrast;
 	}
 }
@@ -176,6 +179,7 @@
 
 	& when not (@prop-scale = 1) {
 		image-rendering: auto;
+		image-rendering: -webkit-optimize-contrast;
 		image-rendering: optimize-contrast;
 	}
 }
@@ -189,6 +193,7 @@
 
 	& when not (@prop-scale = 1) {
 		image-rendering: auto;
+		image-rendering: -webkit-optimize-contrast;
 		image-rendering: optimize-contrast;
 	}
 }
